plugins/git/www/themes/default/css/style.css
.help {
  width: auto;
  background:url(../images/help.png) no-repeat;
  background-position: 5px center;
  border: 1px solid #DDDDDD;
  padding: 0.5em;
  padding-left: 40px;
  margin: 0.5em;
}

.repository {
    width:auto;
}

textarea.text {
    height:50px;
    width:400px;
}

.plugin_git_repo_privacy {
    margin-right: 0.5em;
}

#plugin_git_reference {
    margin-top: 1em;
    margin-bottom: 1em;
}

#plugin_git_reference h1 {
    float:          left;
    padding-bottom: 0;
    padding-top:    0;
    margin-bottom:  0;
    margin-top:     0;
}

#plugin_git_repository_actions {
    float:      right;
    list-style: none;
    align:      left;
    margin:     0 0 0 10em;
}

#plugin_git_repository_actions li {
    display: inline;
}

#plugin_git_repository_actions a {
  background:          no-repeat;
  background-position: 5px center;
  padding-left:        24px;
}

#plugin_git_repository_actions a.repo_fork {
    background-image: url('../images/fork.png');
}

#plugin_git_repository_actions a.repo_admin {
    background-image: url('../images/edit.png');
}

#plugin_git_reference_author {
    clear: both;
    margin:0;
    font-size:0.9em;
    color:gray;
}

#plugin_git_description {
    margin: 0.5em 0 0.5em 0;
}

#plugin_git_fork_form {
    white-space:no-wrap;
    margin-top:0em;
}

#plugin_git_clone_field {
    border:       1px solid rgb(196,196,196);
    padding-left: 5px;
}

#plugin_git_description textarea {
    vertical-align:top;
}

#plugin_git_repo_parent {
    margin-top:0em;
    margin-bottom:0em;
}

#plugin_git_add_mail_msg {
    font-size:0.9em;
}

td.plugin_git_first_col {
    width: 11em;
}

.plugin_git_mail_prefix {
    width:15em;
}

#gitphp {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

#git_repositories_list {
    border-collapse:collapse;
    border-bottom: 1px solid #f5f5f5; 
}

#git_repositories_list td { 
    border-left: 1px solid #f5f5f5; 
    border-right: 1px solid #f5f5f5; 
    padding-left:1em; 
    padding-right:1em; 
} 

#fork_repositories {
    border-collapse: collapse;
}
#fork_repositories td {
    padding-left: 1em;
    border-left: 1px solid #ccc;
    padding-right: 1em;
    border-right: 1px solid #ccc;
}
#fork_repositories td.first {
    padding-left: 0em;
    border-left: none;
}
#fork_repositories td.last {
    padding-right: 0em;
    border-right: none;
}

.widget-preview-plugin_git_user_pushes-en_US,
.widget-preview-plugin_git_user_pushes-fr_FR {
    background-image:url('../images/widget-preview-user_pushes.png');
}

.widget-preview-plugin_git_project_pushes-en_US,
.widget-preview-plugin_git_project_pushes-fr_FR {
    background-image:url('../images/widget-preview-project_pushes.png');
}

#git_repomanagement label {
    display: block;
    margin-bottom: 5px;
}

.git_repomanagement_gerrit_more_description {
    display: inline-block;
    min-height: 20px;
    padding: 19px;
    margin-bottom: 1em;
    background-color: #f5f5f5;
    border: 1px solid #e3e3e3;
    -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
            border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
       -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
}

#plugin_git_clone_url {
    padding-top: 1em;
}

#plugin_git_example,
#plugin_git_example:target {
    border: 1px solid #ccc;
}

button {
  margin: 0;
  font-size: 100%;
  vertical-align: middle;
}

.input-append .active,
.input-prepend .active {
  border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
}

#plugin_git_clone_field {
  font-size: 14px;
  font-weight: normal;
  line-height: 20px;
}

#plugin_git_clone_field {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}


#plugin_git_clone_field {
  display: inline-block;
  height: 20px;
  padding: 4px 6px;
  margin-bottom: 10px;
  font-size: 14px;
  line-height: 20px;
  color: #555555;
  vertical-align: middle;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}

#plugin_git_clone_field {
  width: 206px;
}

#plugin_git_clone_field {
  background-color: #ffffff;
  border: 1px solid #cccccc;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);

}


#plugin_git_clone_field:focus {
  outline: 0;
  outline: thin dotted \9;
  /* IE6-9 */

}

#plugin_git_clone_field:-moz-placeholder {
  color: #999999;
}

#plugin_git_clone_field:-ms-input-placeholder {
  color: #999999;
}

#plugin_git_clone_field::-webkit-input-placeholder {
  color: #999999;
}

.input-mini {
  width: 60px;
}

.input-small {
  width: 90px;
}

.input-medium {
  width: 150px;
}

.input-large {
  width: 210px;
}

.input-xlarge {
  width: 270px;
}

.input-xxlarge {
  width: 530px;
}

#plugin_git_clone_field[class*="span"],
.row-fluid #plugin_git_clone_field[class*="span"] {
  float: none;
  margin-left: 0;
}

.input-append #plugin_git_clone_field[class*="span"],
.input-prepend #plugin_git_clone_field[class*="span"],
.row-fluid #plugin_git_clone_field[class*="span"],
.row-fluid .input-prepend [class*="span"],
.row-fluid .input-append [class*="span"] {
  display: inline-block;
}

#plugin_git_clone_field {
  margin-left: 0;
}

.controls-row [class*="span"] + [class*="span"] {
  margin-left: 20px;
}

#plugin_git_clone_field.span12 {
  width: 926px;
}

#plugin_git_clone_field.span11 {
  width: 846px;
}

#plugin_git_clone_field.span10 {
  width: 766px;
}

#plugin_git_clone_field.span9 {
  width: 686px;
}

#plugin_git_clone_field.span8 {
  width: 606px;
}

#plugin_git_clone_field.span7 {
  width: 526px;
}

#plugin_git_clone_field.span6 {
  width: 446px;
}

#plugin_git_clone_field.span5 {
  width: 366px;
}

#plugin_git_clone_field.span4 {
  width: 286px;
}

#plugin_git_clone_field.span3 {
  width: 206px;
}

#plugin_git_clone_field.span2 {
  width: 126px;
}

#plugin_git_clone_field.span1 {
  width: 46px;
}

